 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-4925: Support for passing the bloom filter to the Bloom UDF (rohini)

PIG-4911: Provide option to disable DAG recovery (rohini)

PIG-4906: Add Bigdecimal functions in Over function (cgalan via daijy)

PIG-2768: Fix org.apache.hadoop.conf.Configuration deprecation warnings for Hadoop 23 (rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4957: See "Received kill signal" message for a normal run after PIG-4921 (rohini)

PIG-4953: Predicate push-down will not run filters for single unary expressions (rdblue via daijy)

PIG-4940: Predicate push-down filtering unary expressions can be pushed (rdblue via daijy)

PIG-4938: [PiggyBank] XPath returns empty values when using aggregation method (nkollar via daijy)

PIG-4896: Param substitution ignored when redefined (knoguchi)

PIG-2315: Make as clause work in generate (daijy via knoguchi)

PIG-4921: Kill running jobs on InterruptedException (rohini)

PIG-4916: Pig on Tez fail to remove temporary HDFS files in some cases (daijy)

Release 0.16.1 - Unreleased

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4945: Update document for conflicting macro params (knoguchi via daijy)

OPTIMIZATIONS

BUG FIXES

PIG-4947: LOAD with HBaseStorage using a mix of pure wildcards and prefixed wildcards results
  in empty maps for the pure wildcarded column families (daijy)

PIG-4948: Pig on Tez AM use too much memory on a small cluster (daijy)

PIG-4949: Fix registering jar in S3 which was broken by PIG-4417 in Pig 0.16 (yangyishan0901m via daijy)

PIG-4950: Fix minor issues with running scripts in non-local FileSystems (petersla via daijy)

Release 0.16.0

INCOMPATIBLE CHANGES

IMPROVEMENTS
